[gd_scene load_steps=4 format=3 uid="uid://budxk3gsf1yap"]

[ext_resource type="LabelSettings" uid="uid://cbqk6ggq5fp5b" path="res://assets/sh_48_red.tres" id="1_2ayo3"]
[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_gq8vc"]
[ext_resource type="AudioStream" uid="uid://osc0hc51s4ly" path="res://assets/audio/game_over.wav" id="3_lculc"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gq8vc")

[node name="GoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = ExtResource("1_2ayo3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -24.5
offset_right = 124.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
label_settings = ExtResource("1_2ayo3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lculc")

[connection signal="timeout" from="SpaceTimer" to="." method="_on_space_timer_timeout"]
